feat(entity): generation de l'entity InternationalArticle

--- a/src/main/webapp/i18n/en/tag.json
+++ b/src/main/webapp/i18n/en/tag.json
@@ -16,7 +16,8 @@
             "detail": {
                 "title": "Tag"
             },
-            "name": "Name"
+            "name": "Name",
+            "internationalsArticle": "Internationals Article"
         }
     }
 }
