--- a/src/main/webapp/i18n/fr/global.json
+++ b/src/main/webapp/i18n/fr/global.json
@@ -9,6 +9,7 @@
                 "main": "Entités",
                 "tag": "Tag",
                 "language": "Language",
+                "internationalArticle": "International Article",
                 "jhipster-needle-menu-add-entry": "JHipster will add additional entities here (do not translate!)"
             },
             "account": {
