--- a/src/main/webapp/i18n/en/home.json
+++ b/src/main/webapp/i18n/en/home.json
@@ -1,7 +1,7 @@
 {
     "home": {
-        "title": "Welcome, Java Hipster!",
-        "subtitle": "This is your homepage",
+        "title": "Welcome, Hopiestrator !",
+        "subtitle": "This is the home page of the administration part of the Hopiestra Web Site.",
         "logged": {
             "message": "You are logged in as user \"{{username}}\"."
         },
@@ -14,6 +14,14 @@
             "follow": "follow @java_hipster on Twitter"
         },
         "like": "If you like JHipster, don't forget to give us a star on",
-        "github": "GitHub"
+        "github": "GitHub",
+        "hopiestra" : {
+            "question": "If you have any question on the project Hopiestra Web Site :",
+            "link": {
+                "github": "Source",
+                "specifications": "Specifications",
+                "uml": "UML"
+            }
+        }
     }
 }
