--- a/src/main/webapp/i18n/fr/home.json
+++ b/src/main/webapp/i18n/fr/home.json
@@ -1,7 +1,7 @@
 {
     "home": {
-        "title": "Bienvenue, Java Hipster !",
-        "subtitle": "Ceci est votre page d'accueil",
+        "title": "Bienvenue, Hopiestrator !",
+        "subtitle": "Ceci est la page d'accueil de la partie administration du site Hopiestra Web Site.",
         "logged": {
             "message": "Vous êtes connecté en tant que \"{{username}}\"."
         },
@@ -14,6 +14,14 @@
             "follow": "Suivez @java_hipster sur Twitter"
         },
         "like": "Si vous aimez JHipster, donnez nous une étoile sur",
-        "github": "GitHub "
+        "github": "GitHub",
+        "hopiestra" : {
+            "question": "Si vous avez des questions à propos du projet Hopiestra Web Site :",
+            "link": {
+                "github": "Source",
+                "specifications": "Cahier des charges",
+                "uml": "UML"
+            }
+        }
     }
 }
