feat(entity): ajout de l'entitée themeSubscription

--- a/src/main/webapp/i18n/en/theme.json
+++ b/src/main/webapp/i18n/en/theme.json
@@ -19,7 +19,8 @@
             "name": "Name",
             "backgroundPicture": "Background Picture",
             "order": "Order",
-            "parentTheme": "Parent Theme"
+            "parentTheme": "Parent Theme",
+            "themeSubscriptions": "Theme Subscriptions"
         }
     }
 }
