--- a/src/main/webapp/i18n/en/internationalArticle.json
+++ b/src/main/webapp/i18n/en/internationalArticle.json
@@ -19,7 +19,8 @@
             "title": "Title",
             "content": "Content",
             "language": "Language",
-            "tags": "Tags"
+            "tags": "Tags",
+            "article": "Article"
         }
     }
 }
