update(Article): MaJ de l'entite Article et de l'affichage de la liaison avec celle-ci sur l'ihm dans l'internationalArticle

--- a/src/main/webapp/i18n/en/article.json
+++ b/src/main/webapp/i18n/en/article.json
@@ -21,6 +21,7 @@
             "updateDate": "Update Date",
             "creationDate": "Creation Date",
             "deleteDate": "Delete Date",
+            "adminTitle": "Admin Title",
             "author": "Author",
             "theme": "Theme",
             "internationalsArticle": "Internationals Article"
