--- a/src/main/webapp/i18n/fr/article.json
+++ b/src/main/webapp/i18n/fr/article.json
@@ -21,6 +21,7 @@
             "updateDate": "Update Date",
             "creationDate": "Creation Date",
             "deleteDate": "Delete Date",
+            "adminTitle": "Admin Title",
             "author": "Author",
             "theme": "Theme",
             "internationalsArticle": "Internationals Article"
