--- a/src/main/webapp/i18n/fr/global.json
+++ b/src/main/webapp/i18n/fr/global.json
@@ -13,6 +13,7 @@
                 "theme": "Theme",
                 "themeSubscription": "Theme Subscription",
                 "article": "Article",
+                "commentary": "Commentary",
                 "jhipster-needle-menu-add-entry": "JHipster will add additional entities here (do not translate!)"
             },
             "account": {
