--- a/src/main/webapp/i18n/en/tag.json
+++ b/src/main/webapp/i18n/en/tag.json
@@ -17,7 +17,7 @@
                 "title": "Tag"
             },
             "name": "Name",
-            "internationalsArticle": "Internationals Article"
+            "articles": "Articles"
         }
     }
 }
