--- a/src/main/webapp/i18n/fr/global.json
+++ b/src/main/webapp/i18n/fr/global.json
@@ -14,6 +14,7 @@
                 "themeSubscription": "Theme Subscription",
                 "article": "Article",
                 "commentary": "Commentary",
+                "internationalTag": "International Tag",
                 "jhipster-needle-menu-add-entry": "JHipster will add additional entities here (do not translate!)"
             },
             "account": {
