--- a/src/main/webapp/i18n/fr/tag.json
+++ b/src/main/webapp/i18n/fr/tag.json
@@ -16,8 +16,9 @@
             "detail": {
                 "title": "Tag"
             },
-            "name": "Name",
-            "articles": "Articles"
+            "code": "Code",
+            "articles": "Articles",
+            "internationalTags": "International Tags"
         }
     }
 }
