--- a/src/main/webapp/i18n/en/global.json
+++ b/src/main/webapp/i18n/en/global.json
@@ -15,6 +15,8 @@
                 "article": "Article",
                 "commentary": "Commentary",
                 "internationalTag": "International Tag",
+                "image": "Image",
+                "internationalTheme": "International Theme",
                 "jhipster-needle-menu-add-entry": "JHipster will add additional entities here (do not translate!)"
             },
             "account": {
