update(Theme): external image in theme

--- a/src/main/webapp/i18n/en/theme.json
+++ b/src/main/webapp/i18n/en/theme.json
@@ -16,11 +16,10 @@
             "detail": {
                 "title": "Theme"
             },
-            "name": "Name",
-            "backgroundPicture": "Background Picture",
             "order": "Order",
             "parentTheme": "Parent Theme",
-            "themeSubscriptions": "Theme Subscriptions"
+            "themeSubscriptions": "Theme Subscriptions",
+            "backgroundPicture": "Background Picture"
         }
     }
 }
