--- a/src/main/webapp/i18n/fr/internationalTheme.json
+++ b/src/main/webapp/i18n/fr/internationalTheme.json
@@ -17,7 +17,8 @@
                 "title": "International Theme"
             },
             "name": "Name",
-            "language": "Language"
+            "language": "Language",
+            "theme": "Theme"
         }
     }
 }
